--- a/index.html
+++ b/index.html
@@ -89,28 +89,24 @@
 
 <h3>Tools</h3>
 
-<p>2 main tools have been utilised in our group work on this report, GitHub and MS (Microsoft) Teams.</p>  
+<p>Two primary tools have been utilised in constructing this report: GitHub and Microsoft (MS) Teams. </p>  
 
+<p>Initially, the use of these tools was slow, as team members learned the ins and outs of these tools - understanding their processes and how to utilise them, and continued work on their individual assigned tasks. </p> 
 
-<p>Initially use of these tools was slow, as team members learned the new tools, understanding their processes, and how to utilise them, and continued work on their individual assigned tasks.</p> 
-
-
-<p>GitHub has been used exclusively for the webpage component of the report, while MS teams has been exclusively used for the development of the Pdf report format. Using the 2 different tools to complete separate components of the overall assessment, has helped reduce confusion, and work duplication. Another benefit has been to produce 2 distinct audit trails. Having 2 distinct records of participation, creates a simplified data trail, and reduced duplication of audit data.</p> 
-
-
+<p>GitHub has been used exclusively for the webpage component of the report, while MS Teams has been used for the development of the main PDF report. Using these tools to complete separate components of the overall assessment has helped reduce confusion and work duplication. Another benefit seen has been the ability to produce two distinct audit trails. Having these records of participation creates a simplified data trail, and reduced duplication of audit data</p> 
 
 
 <h3>Use of GitHub </h3>
-     <p>Aiden Howlett, setup the initial GitHub repository, and Robert Longmore was the significant contributor to the groups GitHub website, as this was his chosen body of work to contribute to the group assessment. As a result, the GitHub commit data is significantly influenced by this one contributor. The GitHub website has numerous analytical tools for its users and provides in depth data on commits and code changes, as well as analytical data on individual contributors. The site also provides data on external traffic to your webpage, if made public.</p>
+     <p>Aiden setup the initial GitHub repository, and Robert was the primary contributor to the group's website, as this was his chosen body of work to contribute towards the group assessment. As a result, the GitHub commit data is significantly influenced by one contributor. GitHub contains numerous analytical tools for its users and provides in-depth data on commits and code changes, as well as analytical data on individual contributors. The site also provides data on external traffic to your webpage, if made public. </p>
 
      <h3><a href = "https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">GitHub Repository</a></h3>
 
      <h3><a href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">GitHub Website</a></h3>
 
 <h3>Use of Microsoft Teams </h3>
-<p>As the PDF document component of the assessment was created and collaboratively worked on via MS teams, and each team member contributing equally to this document. The contributor data on the use of MS Teams varies significantly, to reflect the contributions of each member as they completed their components of the assessment.  Robert Longmore had the smallest contribution here, mainly small edits and updates on the progress of the website development to ensure it reflects the Pdf document accurately, and to solicit team feedback</p>
+<p>The PDF document component of the assessment was created and collaboratively worked on via MS Teams, with each team member contributing equally to this document. The contributor data on the use of MS Teams varies significantly, to reflect the contributions of each member as they completed their components of the assessment. Robert had the smallest contribution here, consisting primarily of small edits and updates on the progress of the website development to ensure it reflects the PDF document accurately, and to solicit team feedback. </p>
 
-<p>MS Teams document provided not only a record of contributors to the document, but also provided an avenue for continued feedback and discussion between contributors as the work progressed. This might have some influence on the meeting agendas, as a lot of hurdles and discussion was via the MS Team workspace, resulting in solutions and agreed changes. Requiring less time to be taken via the scheduled meetings. </p>
+<p>MS Teams provided not only a record of attendance but also provided an avenue for continued feedback and discussion between contributors as the work progressed. This might have had some influence on the meeting agendas, as much of the discussion was via the MS Team workspace outside of scheduled meetings, resulting in solutions and agreed changes. This resulted in less time in scheduled meetings. </p>
 <h3><a href = "https://teams.microsoft.com/l/team/19%3aTmmQZDWoahxeGSRIa3Js65t353n9Gt1MPSTp1W7wLz41%40thread.tacv2/conversations?groupId=94cf4a32-7ddf-455b-81c5-1299c8ab27ab&tenantId=d1323671-cdbe-4417-b4d4-bdb24b51316b">Microsoft Teams</a></h3>
     <hr>
 
