--- a/meetings_recordings.html
+++ b/meetings_recordings.html
@@ -105,20 +105,20 @@
     <hr>
 
     <p>5th meeting, 12-July-2022 The Countdown.</p>
-    <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/4th%20Meeting%20-%20"><b>Meeting 5 recording</b></a></p>
+    <p><a href = "https://rmiteduau-my.sharepoint.com/personal/s3962116_student_rmit_edu_au/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fs3962116%5Fstudent%5Frmit%5Fedu%5Fau%2FDocuments%2FRecordings%2F5th%20Meeting%20%2D%20%5FThe%20Interview%5F%20%2D%20IIT%20Assessment%202%20Group%202%2D20220712%5F195921%2DMeeting%20Recording%2Emp4&parent=%2Fpersonal%2Fs3962116%5Fstudent%5Frmit%5Fedu%5Fau%2FDocuments%2FRecordings&ga=1"><b>Meeting 5 recording</b></a></p>
     <p><a href = "documents/meeting5Agenda.pdf"><b>5th Agenda.pdf</b></a></p>
     <p><a href = "documents/5th_meetingActions.pdf"><b>5th Actions.pdf</b></a></p>
 
     <hr>
     <p>6th meeting, 14-July-2022 Final Countdown.</p>
    <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/Meeting%20in%20_General_-20220714_201206-Meeting%20Recording.mp4"><b>Meeting 6 recording</b></a></p>
-    <p><a href = "documents/meeting5Agenda.pdf"><b>5th Agenda.pdf</b></a></p>
-    <p><a href = "documents/5th_meetingActions.pdf"><b>5th Actions.pdf</b></a></p>
-  
+    <p><a href = "documents/meeting6Agenda.pdf"><b>6th Agenda.pdf</b></a></p>
+    <p><a href = "documents/6th_meetingActions.pdf"><b>6th Actions.pdf</b></a></p>
+  <hr>
     <p>7th meeting, 18-July-2022 General discussion.</p>
-    <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/Meeting%20in%20_General_-20220718_183150-Meeting%20Recording.mp4"><b>Meeting 6 recording</b></a></p>
-     <p><a href = "documents/meeting7Agenda.pdf"><b>5th Agenda.pdf</b></a></p>
-     <p><a href = "documents/7th_meetingActions.pdf"><b>5th Actions.pdf</b></a></p>
+    <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/Meeting%20in%20_General_-20220718_183150-Meeting%20Recording.mp4"><b>Meeting 7 recording</b></a></p>
+     <p><a href = "documents/meeting7Agenda.pdf"><b>7th Agenda.pdf</b></a></p>
+     <p><a href = "documents/7th_meetingActions.pdf"><b>7th Actions.pdf</b></a></p>
     </div>
 
 <!--main text-->
